# project--

./: CMakeLists.txt  README.md  main.rar  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  audio_task.c  audio_task.h  button_task.c  button_task.h  display_task.c  display_task.h  elevator_state_machine.c  elevator_state_machine.h  idf_component.yml  main.c  score_task.c  score_task.h  sensor_task.c  sensor_task.h  shared_data.c  shared_data.h  subjective_score.c  subjective_score.h
